# gamer

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  API_CONTRACT.md  Dockerfile  GENRE_SUBS_PLAN.md  MULTIUSER_PLAN.md  Makefile  PLAN.md  README.md  SECURITY.md  UI_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_ui_indexes.py  0003_game_stats.py  0004_game_embedding_hnsw.py  0005_subscribed_genres.py  0006_multiuser.py
src/gamer/: __init__.py  __main__.py  app.py  config.py  health.py  jobs.py  logging.py  scheduler.py
src/gamer/api/: __init__.py  app.py  deps.py  spa.py  spark.py  templating.py
src/gamer/bot/: __init__.py  app.py  handlers.py  keys.py  middleware.py
src/gamer/catalog/: __init__.py  genre_tracking.py
src/gamer/db/: __init__.py  engine.py  models.py
src/gamer/enrichment/: __init__.py  embeddings.py  jobs.py  llm.py
src/gamer/notify/: __init__.py  base.py  digest.py  discord.py  outbox.py  telegram.py
src/gamer/scoring/: __init__.py  assembler.py  backtest.py  base.py  penalties.py  registry.py  service.py
src/gamer/signals/: __init__.py  movers.py  rollups.py  stats.py
src/gamer/sources/: __init__.py  base.py  http.py  rss.py  runner.py  sink.py  steam_api.py  steam_store.py  switch.py  twitch.py
tests/: conftest.py  test_api.py  test_api_dashboard.py  test_api_dashboard_integration.py  test_api_deps.py  test_api_game_detail.py  test_api_game_detail_integration.py  test_api_games.py  test_api_games_integration.py  test_api_news.py  test_api_news_integration.py  test_api_recs.py  test_api_recs_integration.py  test_api_sources.py  test_api_sources_integration.py  test_api_spa.py  test_api_spark.py  test_api_users.py  test_api_users_integration.py  test_backtest.py  test_bot_handlers.py  test_bot_keys.py  test_bot_middleware.py  test_config.py  test_digest.py  test_discord_transport.py  test_embeddings.py  test_enrichment_jobs.py  test_genre_tracking_integration.py  test_health.py  test_http.py  test_jobs_wiring.py  test_llm.py  test_logging_redact.py  test_notify_contract.py  test_outbox.py  test_penalties.py  test_rss_source.py  test_scoring_assembler.py  test_scoring_fit.py  (+15 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.test.ts  client.ts  games.ts  news.ts  ops.ts  recommendations.ts  types.ts  users.ts
web/src/components/: Chart.tsx  ErrorBoundary.tsx  Layout.tsx  (+4 more)
(+60 files in other folders)
