[project]
name = "gamer"
version = "0.1.0"
description = "Self-hosted service that watches the Steam ecosystem and recommends what a streamer should play next."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "gamer contributors" }]

dependencies = [
    "aiogram>=3.13,<4",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "feedparser>=6.0",
    "httpx>=0.27",
    "jinja2>=3.1.6",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# Heavy / GPU-bound extras kept optional so the core app installs cheaply and
# runs without a model on the box. See PLAN.md §2 (embeddings / optional LLM).
ml = [
    "sentence-transformers>=3.0",
]

[project.scripts]
gamer = "gamer.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "types-python-dateutil>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gamer"]
# Ship the web-UI templates and vendored static assets inside the package so
# Path(__file__).parent resolves them in an installed wheel (UI_PLAN.md §4).
artifacts = [
    "src/gamer/api/templates/**",
    "src/gamer/api/static/**",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".claude", "web"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ASYNC", # flake8-async
    "RUF",
]
ignore = ["B008"]  # function call in default arg — needed for Depends-style patterns

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["gamer"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "pgvector.*", "sentence_transformers.*", "feedparser.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: talks to a real database or external service (deselected by default in CI unit runs)",
]

[tool.coverage.run]
source = ["src/gamer"]
branch = true
